# mcp-sdk-rs

./: Cargo.toml  README.md
examples/: process_management_demo.rs  websocket_client.rs  websocket_server.rs
src/: lib.rs  protocol.rs  types.rs
src/client/: mod.rs
src/process/: io.rs  manager.rs  mod.rs
src/server/: mod.rs
src/session/: mod.rs
src/transport/: stdio.rs  websocket.rs
tests/: process_cleanup_test.rs
